Tweak vector map defaults

--- a/ui/templates/report3-form.html
+++ b/ui/templates/report3-form.html
@@ -304,13 +304,6 @@ Skyline Window
           <tr><td colspan="2"><b>Formatting / output options</b> - how
           to display the output.<br/><br/>
           </td></tr>
-            
-          <tr>
-            <td>Line opacity</td>
-            <td> (this has finally moved to the results page)
-            </td>
-          </tr>
-
 
           <tr>
             <td>Result format</td>
@@ -324,16 +317,15 @@ Skyline Window
           <tr><td colspan="2"><hr/></td></tr>
         </table>
 
-
-          <br/>
+        <br/>
         <p style="text-align:center"><input class="button" type="submit" value="GENERATE"/></p>
         <br/>
         </div>
 <!--
         <p> Debug: <input type="text" name="debug" value="1" size="1"/></p>
 -->
-        <p>Instructions: <a href="https://goo.gl/2MVVSU"><code>https://goo.gl/2MVVSU</code></a></p>
-        <p>Data only really starts at 11:30am on Wed Sep 23.</p>
+        <p>Instructions: <a href="https://goo.gl/2MVVSU">https://goo.gl/2MVVSU</a></p>
+        <p>Data only really starts at 11:30am on Wed Sep 23, 2015.</p>
         
       </div>
     </form>
