By default, FOIA-only where the dates make sense

--- a/ui/templates/report3-form.html
+++ b/ui/templates/report3-form.html
@@ -34,6 +34,11 @@
             <td><input type="text" name="nottags" size="12" value=""/>
             (any matches will be removed; not efficient!)
           </tr>
+          <tr>
+            <td>Use only FOIA, where present</td>
+            <td><input type="checkbox" name="preferfoia" checked="yes"/></td>
+          </tr>
+
 
           <tr>
             <td>Waypoints</td>
@@ -325,7 +330,6 @@ Skyline Window
         <p> Debug: <input type="text" name="debug" value="1" size="1"/></p>
 -->
         <p>Instructions: <a href="https://goo.gl/2MVVSU">https://goo.gl/2MVVSU</a></p>
-        <p>Data only really starts at 11:30am on Wed Sep 23, 2015.</p>
         
       </div>
     </form>
