--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -28,6 +28,14 @@
         {{.VisualizationFormTag}}
         <table>
           <tr><td colspan="10">
+              <!-- Common arguments to all visualizations -->
+              <input type="hidden" name="resultset" value="saveme" />
+              maxFlights:<input type="text" name="maxflights" size="4" value="1000"/>
+              <br/>
+              
+              <!-- this is a hack, to provoke the magic handler to --
+                -- stash the list of idspecs into datastore, and then --
+                -- use the datastore key for a permalink. -->
               <button type="submit" name="viewtype" value="vector" class="btn-link">VectorMap</button>
               [noFurn:<input type="checkbox" checked="yes" name="nofurniture"/>;
               colorBy:<select name="colorby">
@@ -43,18 +51,16 @@
               explicitColor:<input type="text" name="explicitcolor" size="8" value=""/>,
               minAltitude:<input type="text" name="minaltitude" size="5" value="3000"/>,
               maxAltitude:<input type="text" name="maxaltitude" size="5" value="10000"/>,
-              maxFlights:<input type="text" name="maxflights" size="4" value="1000"/>]
-              <br/>
               <button type="submit" name="viewtype" value="descent" class="btn-link">AltitudeGraph</button>
               [<input type="text" name="length" size="3" value="100"/>NM by
               <input type="text" name="alt" size="5" value="30000"/>ft;
               showAccel:<input type="checkbox" name="showaccelerations"/>;
               showAngle:<input type="checkbox" name="showangleofinclination"/>;
+              showClassB:<input type="checkbox" name="classb"/>;
               avgWin:<input size="4" type="text" name="averagingwindow" value="0s"/>
               sampleRate:<input size="4" type="text" name="sample" value="15s"/>
               dest:<input size="5" type="text" name="airportdest" value="KSFO"/>
               asDepartures:<input type="checkbox" name="asdepartures"/>,
-              maxFlights:<input type="text" name="maxflights" size="4" value="1000"/>]
           </td></tr>
           <tr><td colspan="8">
               <b>Checkboxes</b>:[
