Repair the vector-track onclick stuff

--- a/ui/templates/map.html
+++ b/ui/templates/map.html
@@ -8,7 +8,7 @@
     <style type="text/css">
       html, body { height: 100%; margin: 0; padding: 0; }
       #map { height: 100%; }
-      #legend,#details {
+      #legend,#details,#notes {
         background: white;
         margin: 0.8em;
         padding: 0.8em;
@@ -22,6 +22,7 @@
     <div id="map"></div>
     <div id="legend"></div>
     <div id="details"></div>
+    <div id="notes"></div>
     <script type="text/javascript">
       {{template "js-map" . }}
     </script>
