Settle on 'airspace' as the canonical representation; get the fa & fr24 libs generating that. Toughen up the callsign processing for fr24. Add complaints heatmaps to the map view.

--- a/ui/templates/map.html
+++ b/ui/templates/map.html
@@ -27,7 +27,7 @@
       {{template "js-map" . }}
     </script>
     <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key={{.MapsAPIKey}}&callback=initMap&libraries=drawing,geometry">
+      src="https://maps.googleapis.com/maps/api/js?key={{.MapsAPIKey}}&callback=initMap&libraries=drawing,geometry,visualization">
     </script>
   </body>
 </html>
