Use silver maps by default

--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -47,7 +47,9 @@
                 <option value="explicit">ExplicitColor</option>
               </select>;
               lineOpacity:<input type="text" name="maplineopacity" size="4" value="0.4"/>,
+<!-- Obsoleted by Silver map type
               whiteVeil:<input type="checkbox" name="whiteveil"/>,
+-->
               explicitColor:<input type="text" name="explicitcolor" size="8" value=""/>,
               minAltitude:<input type="text" name="minaltitude" size="5" value="3000"/>,
               maxAltitude:<input type="text" name="maxaltitude" size="5" value="10000"/>,
