--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -79,18 +79,21 @@
       </div>
 
       <div style="text-align:left">
-      <p>DEBUG:<a target="_blank" href="localhost:8080/fdb/snarf?idspec={{.IdSpecs}}">snarf
-      to a local flightdb2/ui</a></p>
+<!--      <p>DEBUG:<a target="_blank" href="localhost:8080/fdb/snarf?idspec={{.IdSpecs}}">snarf
+      to a local flightdb2/ui</a></p> -->
       <p><pre>{{.OptStr}}</pre></p>
       <p><pre>{{.R.Log}}</pre></p>
       </div>
       
       <div class="stack">
         <h3>Notes</h3>
-        {{if .R.UserEmail}}
-        <p>User <code>{{.R.UserEmail}}</code>
-          {{if .R.CanSeeFOIA}} (can see FOIA data) {{end}}
+        {{if .R.ReportingContext.UserEmail}}
+        <p>User <code>{{.R.ReportingContext.UserEmail}}</code>
+          {{if .R.ReportingContext.CanSeeFOIA}} (can see FOIA data)
+          {{else}} (no FOIA access){{end}}
         </p>
+        {{else}}
+        <p>User not logged in - <a href="{{.LoginUrl}}">login here</a>.</p>
         {{end}}
       </div>
     </div>
