Ensure the UI has a populated reports registry.

--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -30,7 +30,7 @@
           <tr><td colspan="10">
               <!-- Common arguments to all visualizations -->
               <input type="hidden" name="resultset" value="saveme" />
-              maxFlights:<input type="text" name="maxflights" size="4" value="1000"/>
+              &nbsp;&nbsp;&nbsp;maxFlights:<input type="text" name="maxflights" size="4" value="1000"/>
               <br/>
               
               <!-- this is a hack, to provoke the magic handler to --
@@ -52,8 +52,9 @@
 -->
               explicitColor:<input type="text" name="explicitcolor" size="8" value=""/>,
               minAltitude:<input type="text" name="minaltitude" size="5" value="3000"/>,
-              maxAltitude:<input type="text" name="maxaltitude" size="5" value="10000"/>,
-              <button type="submit" name="viewtype" value="descent" class="btn-link">AltitudeGraph</button>
+              maxAltitude:<input type="text" name="maxaltitude" size="5" value="10000"/>.
+<br/>
+<button type="submit" name="viewtype" value="descent" class="btn-link">AltitudeGraph</button>
               [<input type="text" name="length" size="3" value="100"/>NM by
               <input type="text" name="alt" size="5" value="30000"/>ft;
               showAccel:<input type="checkbox" name="showaccelerations"/>;
