Move some CGI bits upstream into geo. Support waypoints for descent plots.

--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -62,7 +62,7 @@
               showClassB:<input type="checkbox" name="classb"/>;
               avgWin:<input size="4" type="text" name="averagingwindow" value="0s"/>
               sampleRate:<input size="4" type="text" name="sample" value="15s"/>
-              dest:<input size="5" type="text" name="airportdest" value="KSFO"/>
+              destPt:<input size="5" type="text" name="destpt_name" value="KSFO"/>
               asDepartures:<input type="checkbox" name="asdepartures"/>,
           </td></tr>
           <tr><td colspan="8">
