t.ClosestTo now takes an altitude range. The descent plots now take a general anchor point, not just an airport name. The descent plots support an altitude range over the anchor, to help with BRIXX vs. SFO final approach. The permalink hackery has been moved upstream into UIOptions. Descent PDFs now have permalinks.

--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -52,7 +52,7 @@
 -->
               explicitColor:<input type="text" name="explicitcolor" size="8" value=""/>,
               minAltitude:<input type="text" name="minaltitude" size="5" value="3000"/>,
-              maxAltitude:<input type="text" name="maxaltitude" size="5" value="10000"/>.
+              maxAltitude:<input type="text" name="maxaltitude" size="5" value="10000"/>.]
 <br/>
 <button type="submit" name="viewtype" value="descent" class="btn-link">AltitudeGraph</button>
               [<input type="text" name="length" size="3" value="100"/>NM by
@@ -61,9 +61,11 @@
               showAngle:<input type="checkbox" name="showangleofinclination"/>;
               showClassB:<input type="checkbox" name="classb"/>;
               avgWin:<input size="4" type="text" name="averagingwindow" value="0s"/>
-              sampleRate:<input size="4" type="text" name="sample" value="15s"/>
-              destPt:<input size="5" type="text" name="destpt_name" value="KSFO"/>
-              asDepartures:<input type="checkbox" name="asdepartures"/>,
+              sampleRate:<input size="4" type="text" name="sample" value="15s"/>;
+              anchor:<input size="5" type="text" name="anchor_name" value="KSFO"/>
+              anchorAltMin:<input size="5" type="text" name="anchor_alt_min" value="0"/>
+              anchorAltMax:<input size="5" type="text" name="anchor_alt_max" value="5000"/>
+              asDepartures:<input type="checkbox" name="asdepartures"/>.]
           </td></tr>
           <tr><td colspan="8">
               <b>Checkboxes</b>:[
