First pass at a more principled sideview renderer

--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -62,10 +62,19 @@
               showClassB:<input type="checkbox" name="classb"/>;
               avgWin:<input size="4" type="text" name="averagingwindow" value="0s"/>
               sampleRate:<input size="4" type="text" name="sample" value="15s"/>;
-              anchor:<input size="5" type="text" name="anchor_name" value="KSFO"/>
-              anchorAltMin:<input size="5" type="text" name="anchor_alt_min" value="0"/>
-              anchorAltMax:<input size="5" type="text" name="anchor_alt_max" value="5000"/>
               asDepartures:<input type="checkbox" name="asdepartures"/>.]
+<br/>
+<button type="submit" name="viewtype" value="sideview" class="btn-link">*New* Sideview</button>
+[all above, also:
+
+anchor:<input size="5" type="text" name="anchor_name" value="KSFO"/>;
+window width: 
+<input size="3" type="text" name="anchor_dist_min" value="-100"/>-
+<input size="3" type="text" name="anchor_dist_max" value="0"/>NM;
+altitudes to hit anchor:
+<input size="5" type="text" name="anchor_alt_min" value="0"/>-
+<input size="5" type="text" name="anchor_alt_max" value="25000"/>ft.
+]
           </td></tr>
           <tr><td colspan="8">
               <b>Checkboxes</b>:[
