--- a/ui/templates/header.html
+++ b/ui/templates/header.html
@@ -1,6 +1,6 @@
 {{define "header"}}
 <head>
-  <title>fdb.jetnoise.net</title>
+  <title>fdb.serfr1.org</title>
   <link rel="stylesheet" type="text/css" href="/static/fdb.css">
   <link rel="icon" type="image/png" href="/static/icon.png" />
 
