--- a/ui/templates/widget-waypoint-or-pos.html
+++ b/ui/templates/widget-waypoint-or-pos.html
@@ -1,9 +1,13 @@
 {{define "widget-waypoint-or-pos"}}
-              <select name="{{.Name}}_name">
-                <option value="" selected="1">(waypoint)</option> 
-                {{range .Waypoints}}
-                <option value="{{.}}">{{.}}</option>{{end}}
-              </select>, or latlong
-              <input type="text" name="{{.Name}}_lat" size="7" value=""/>,
-              <input type="text" name="{{.Name}}_long" size="7" value=""/>
+<!-- Call as [[template "widget-waypoint-or-pos" nlldict "your_stem" . ]] -->
+
+{{$dflt := .nll_name}}
+<select name="{{.nll_stem}}_name">
+  <option value="" {{if not .nll_name}}selected="1"{{end}}>(waypoint)</option> 
+  {{range .nll_waypoints}}
+  <option value="{{.}}"{{if $dflt}}{{if $dflt | eq .}}selected="1"{{end}}{{end}}>{{.}}</option>{{end}}
+</select>, or latlong
+<input type="text" name="{{.nll_stem}}_lat" size="7" value="{{.nll_lat}}"/>,
+<input type="text" name="{{.nll_stem}}_long" size="7" value="{{.nll_long}}"/>
+
 {{end}}
