Rename the restrictor stuff

--- a/ui/templates/map.html
+++ b/ui/templates/map.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>fdb.jetnoise.net</title>
+    <title>fdb.serfr1.org</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
     <link rel="stylesheet" type="text/css" href="/static/fdb.css">
     <style type="text/css">
