Finish off the arbitrary polygon stuff; and let the georestrictor mapview render arbitrary points and lines, to help debug stuff.

--- a/ui/templates/restrictors-gr-edit-form.html
+++ b/ui/templates/restrictors-gr-edit-form.html
@@ -106,15 +106,15 @@ function AddPolyPoint() {
   <p>Add vertices in order, clockwise. Concavity is OK. After you save, view it on the map to see what it looks like.</p><br/>
   <div class="box">
     <div id="points">
-      <p>Point 1: {{template "widget-waypoint-or-pos" nlldict "poly_p1" . }}</p>
-      <p>Point 2: {{template "widget-waypoint-or-pos" nlldict "poly_p2" . }}</p>
-      <p>Point 3: {{template "widget-waypoint-or-pos" nlldict "poly_p3" . }}</p>
-      <p>Point 4: {{template "widget-waypoint-or-pos" nlldict "poly_p4" . }}</p>
-      <p>Point 5: {{template "widget-waypoint-or-pos" nlldict "poly_p5" . }}</p>
-      <p>Point 6: {{template "widget-waypoint-or-pos" nlldict "poly_p6" . }}</p>
-      <p>Point 7: {{template "widget-waypoint-or-pos" nlldict "poly_p7" . }}</p>
-      <p>Point 8: {{template "widget-waypoint-or-pos" nlldict "poly_p8" . }}</p>
-      <p>Point 9: {{template "widget-waypoint-or-pos" nlldict "poly_p9" . }}</p>
+      <p>Vertex 1: {{template "widget-waypoint-or-pos" nlldict "poly_p1" . }}</p>
+      <p>Vertex 2: {{template "widget-waypoint-or-pos" nlldict "poly_p2" . }}</p>
+      <p>Vertex 3: {{template "widget-waypoint-or-pos" nlldict "poly_p3" . }}</p>
+      <p>Vertex 4: {{template "widget-waypoint-or-pos" nlldict "poly_p4" . }}</p>
+      <p>Vertex 5: {{template "widget-waypoint-or-pos" nlldict "poly_p5" . }}</p>
+      <p>Vertex 6: {{template "widget-waypoint-or-pos" nlldict "poly_p6" . }}</p>
+      <p>Vertex 7: {{template "widget-waypoint-or-pos" nlldict "poly_p7" . }}</p>
+      <p>Vertex 8: {{template "widget-waypoint-or-pos" nlldict "poly_p8" . }}</p>
+      <p>Vertex 9: {{template "widget-waypoint-or-pos" nlldict "poly_p9" . }}</p>
     </div>
 
 
