Learn from https://blog.jquery.com/2014/07/03/dont-use-jquery-latest-js/

--- a/app/frontend/templates/map/map.html
+++ b/app/frontend/templates/map/map.html
@@ -15,7 +15,7 @@
       }
     </style>
     <link rel="icon" type="image/png" href="/static/icon.png" />
-    <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
   </head>
 
   <body>
